# dk1

./: .gitmodules  LICENSE  README.md  pyproject.toml
hardware/dk1-x-framing_STLs/: 3030-camera-extrusion-mount.stl  3030-uvc-camera-frame.stl  4080-endcap.stl  4080-t-connector-front.stl  4080-t-connector-rear.stl
hardware/follower_STEPs/: link0-1_v0.2.0.step  link1-2_v0.2.0.step  link2-3_v0.2.0.step  link3-4-1-adjusted_v0.2.0.step  link3-4-1_v0.2.0.step  link3-4-2_v0.2.0.step  link4-5_v0.2.0.step  link5-6_v0.2.0.step
hardware/follower_STLs/: dm-adapter_v0.2.0.stl  dm-idler_v0.2.0.stl  dm-shaft-extension_v0.2.0.stl  joint5-cable-cover_v0.2.0.stl  like1-2-rest_v0.2.0.stl  link2-3-frame_v0.2.0.stl  link3-4-frame_v0.2.0.stl  link5-6-rest_v0.2.0.stl  link5-6-spacer_v0.2.0.stl
hardware/follower_gripper_STLs/: camera-shell_v0.2.0.stl  d405-holder_v0.1.0.stl  finger-holder_v0.2.0.stl  finger_v0.2.0.stl  gear-rack_v0.1.0.stl  gear-shaft_v0.1.0.stl  link6-7-1_v0.2.0.stl  link6-7-2_v0.2.0.stl  soft-finger-holder_v0.2.0.stl  soft-finger_v0.2.0.stl
hardware/leader_STLs/: gello_handle_45deg.stl  leader.3mf  link0-1_v0.1.0.stl  link1-2_v0.1.0.stl  link2-3_v0.1.0.stl  link3-4_v0.1.0.stl  link4-5-flipped_v0.1.0.stl  link4-5_v0.1.0.stl  link5-6-1_v0.1.0.stl  link5-6-2_v0.1.0.stl
src/trlc_dk1/: bi_follower.py  bi_leader.py  follower.py  leader.py
src/trlc_dk1/motors/DM_Control_Python/: DM_Motor_Test.py
